# JONImageProcessor

./: .gitignore  CMakeLists.txt  README.md  ReleaseNotes.md
cmake/toolchains/: jetson-aarch64.cmake
docs/: BRIO_camera_boot_check.md  architecture.md  cross-compile-jetson.md
etc/: jonimageprocessor.json
etc/systemd/system/: brio-startup-check.service  jon-image-processor.service  jon.target
packaging/systemd/: JONImageProcessor.service
patches/jetson-inference/: apply-tensorrt10-input-address.py
scripts/: brio-startup-check.sh  build-jetson-cross.sh  patch-binary-git-version.sh
src/: BenchmarkRecorder.cpp  BenchmarkRecorder.h  CaptureBackendFactory.cpp  CaptureBackendFactory.h  CommandLineOptions.cpp  CommandLineOptions.h  ConfigFile.cpp  ConfigFile.h  Daemon.cpp  Daemon.h  DisplayBackendFactory.cpp  DisplayBackendFactory.h  DisplayEnvironment.cpp  DisplayEnvironment.h  DisplayRenderer.cpp  DisplayRenderer.h  DrmKmsDisplayBackend.cpp  DrmKmsDisplayBackend.h  HtmlMediaRenderer.cpp  HtmlMediaRenderer.h  ICaptureBackend.h  IDisplayBackend.h  IMaskBackend.h  JetsonSegmentationMaskBackend.cpp  Logger.cpp  Logger.h  LowLatencyFrameCapture.cpp  LowLatencyFrameCapture.h  MaskBackendFactory.cpp  MaskBackendFactory.h  MaskBackends.cpp  MaskBackends.h  OpenCvCaptureBackends.cpp  OpenCvCaptureBackends.h  OpenCvDisplayBackend.cpp  OpenCvDisplayBackend.h  ShutdownSignal.cpp  ShutdownSignal.h  TensorRtMaskBackend.cpp  V4L2CameraCaptureBackend.cpp  (+5 more)
src/ipc/: IPCServer.cpp  IPCServer.h  RuntimeState.h
testdata/: README.md
